--- a/public/categ3.html
+++ b/public/categ3.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/categ1.css">
     <script src="index.js"></script>
+    <script src="categs.js"></script>
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <header> 
-        <a href="index.html">
+        <a href="http://localhost:7000/">
             <img id="logo" src="photos_index/logo.png" width="65px" title="Back to home">
         </a>
 
@@ -35,23 +36,12 @@
         </div>
 
         <button class="profile" id="profileButton"><i class="fa-solid fa-user"></i></button>
+
     </header>
 
-    <div id="sidebar" class="sidebar">
-        <div class="sidebar-header">
-            <h3 id="userName">👤User Name</h3> 
-            <br>
-            <p id="userEmail"><b>📅Registration date:</b>&nbsp;<p style="color: white;"><b>28.02.2025</b></p></p> 
-            <br>
-            <p id="userDescription"><b>🏞️A short description:</b>.</p>
-            <p>Димчо Димов е успешен бизнесмен и предприемач с опит в технологиите и иновациите. В свободното си време обича приключенски спортове и фотография</p>
-        </div>
-        <button id="logoutButton" class="logout-button"><b>Log&nbsp;out</b></button> 
+    <div class="zaglavie-main">
+        <h1 class="bel"> Best Selers </h1>
     </div>
-
-
-    <h1 class="bel"> Best Selers </h1>
-
 
     <div class="carousel-container">
 
@@ -65,56 +55,32 @@
 
             <div class="slide" id="s1">
                 <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="book1" src="photos-categ1/kniga1.jpg">
+                    <img class="car_picture" title="book1" src="photos-categ3/kniga2.png">
                 </a>
                 <div class="bookinfo">
-                    <h1>360° ПРЕДИ КРАЯ</h1>
-                    <p>Това изчадие на бога е сигурно да ви изпие всяка капка съзнание, която притежавате, без
-                        компромиси. С неяната изумителна дебелина и тежест я прави идеален инструмент за замерване,
-                        както и за подарък! Дигиталната ѝ големина също не е за подженяване, която навярно ще ви
-                        завземе 80% от диск с размер 1TB! Прочетете сега ако желаете да замените живота си със някво
-                        жалко съществуване, обусловено единствено от това да си губите времето с тази тухла!</p>
+                    <h1>Последна молитва</h1>
+                    <p>„Последна молитва“ е емоционално наситен роман, който разглежда теми като вярата, загубата и изкуплението. Историята следва главния герой, който се изправя пред важни житейски изпитания и търси смисъл в трудни моменти.</p>
                 </div>
             </div>
 
             <div class="slide" id="s2">
                 <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="Между чука и наковалнята" src="photos-categ1/kniga2.jpg">
+                    <img class="car_picture" title="Между чука и наковалнята" src="photos-categ3/kniga3.png">
                 </a>
                 <div class="bookinfo">
-                    <h1>Между Чудовища</h1>
-                    <p>Тази книга ще ви научи на тайното изкуство на продуктивното нищоправене! Със специални
-                        техники като „Ще го направя утре“ и „Ако не го започнеш, няма как да го сбъркаш“, това
-                        четиво ще ви помогне да усъвършенствате прокрастинацията до ниво майстор. Перфектен подарък
-                        за всеки, който има дълъг списък със задачи… и никакво намерение да ги изпълни.</p>
+                    <h1>Дарена</h1>
+                    <p>„Дарена“ е вдъхновяваща и емоционално наситена история, която разказва за силата на таланта, личните предизвикателства и израстването. Главната героиня, която притежава изключителен дар, се изправя пред трудности, свързани с това как да балансира живота си.</p>
                 </div>
             </div>
 
             <div class="slide" id="s3">
                 <a href="book1.html" class="car_link">
                     <img class="car_picture" title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
-                        src="photos-categ1/kniga3.jpg">
+                        src="photos-categ3/kniga4.png">
                 </a>
                 <div class="bookinfo">
-                    <h1>Некъв учебник по бългаски</h1>
-                    <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас! От
-                        „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и не
-                        изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато ядете
-                        пред телевизора в 2 през нощта.</p>
-                </div>
-            </div>
-
-            <div class="slide" id="s3">
-                <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
-                        src="photos-categ1/kniga3.jpg">
-                </a>
-                <div class="bookinfo">
-                    <h1>Некъв учебник по бългаски</h1>
-                    <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас! От
-                        „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и не
-                        изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато ядете
-                        пред телевизора в 2 през нощта.</p>
+                    <h1>Високо</h1>
+                    <p>„Високо“ е книга, която изследва темите за стремежа, смелостта и преодоляването на лични бариери. Главният герой се изправя пред сериозни изпитания, като се опитва да достигне до своите най-високи амбиции и мечти, независимо от трудностите по пътя.</p>
                 </div>
             </div>
 
@@ -131,7 +97,7 @@
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ3/kniga1.png" >
+                    <img class="snimka img-size" src="photos-categ3/kniga1.png">
                 </a>
             </div>
             <div class="text">
@@ -143,7 +109,7 @@
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ3/kniga2.png">
+                    <img class="snimka img-size" src="photos-categ3/kniga2.png">
                 </a>
             </div>
             <div class="text">
@@ -155,7 +121,7 @@
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ3/kniga3.png" >
+                    <img class="snimka img-size" src="photos-categ3/kniga3.png">
                 </a>
             </div>
             <div class="text">
@@ -167,11 +133,11 @@
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ3/kniga4.png">
+                    <img class="snimka img-size" src="photos-categ3/kniga4.png">
                 </a>
             </div>
             <div class="text">
-                <h3 id="zaglavie4 img-size">Високо</h3>
+                <h3 id="zaglavie4">Високо</h3>
                 <p id="avtor">Автор: Владимир Николов</p>
             </div>      
         </div>
@@ -193,8 +159,8 @@
             <p>email: ReadHub@gmail.com</p>
             <p>Legends enterprises<sup>®</sup></p>
             <div id="info2">
-                <a class="footerlink" href="http://localhost:7000/login"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
-                <a class="footerlink" href="http://localhost:7000/signup"><b>Sign Up</b></a>
+                <a class="footerlink" href="login.html"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="signup.html"><b>Sign Up</b></a>
             </div>
         </div>
         <div id="info3">
@@ -206,3 +172,5 @@
     </footer>
 
 </body>
+
+</html>
