--- a/public/categ1.html
+++ b/public/categ1.html
@@ -71,7 +71,7 @@
                     </a>
                     <div class="bookinfo">
                         <h1>360° ПРЕДИ КРАЯ</h1>
-                        <p>„360 градуса преди края“ е книга, която разглежда пътя към самопознанието и важността на изборите, които правим в живота си. Историята изследва вътрешните конфликти и трансформации на главния герой, като акцентира върху важността на моментите, които често пренебрегваме, но които крият важни уроци. Книгата насърчава читателя да се замисли за посоката на своя живот, да се изправи пред страховете си и да поеме отговорност за своите действия. С емоционална дълбочина и философски размисли, „360 градуса преди края“ провокира към лични открития и промяна.</p>
+                        <p>„360 градуса преди края“ е книга, която разглежда пътя към самопознанието и важността на изборите, които правим в живота си. Историята изследва вътрешните конфликти и трансформации на главния герой.</p>
                     </div>
                 </div>
 
@@ -80,11 +80,8 @@
                         <img class="car_picture" title="Между чука и наковалнята" src="photos-categ1/kniga2.jpg">
                     </a>
                     <div class="bookinfo">
-                        <h1>Между Чудовища</h1>
-                        <p>Тази книга ще ви научи на тайното изкуство на продуктивното нищоправене! Със специални
-                        техники като „Ще го направя утре“ и „Ако не го започнеш, няма как да го сбъркаш“, това
-                        четиво ще ви помогне да усъвършенствате прокрастинацията до ниво майстор. Перфектен подарък
-                        за всеки, който има дълъг списък със задачи… и никакво намерение да ги изпълни.</p>
+                        <h1>Между Роднини</h1>
+                        <p>„Между роднини“ е книга, която разглежда взаимоотношенията в семейството и сложността на роднинските връзки. Историята разкрива как семейните тайни могат да формират живота на всеки член от семейството.</p>
                     </div>
                 </div>
 
@@ -94,25 +91,8 @@
                             src="photos-categ1/kniga3.jpg">
                     </a>
                     <div class="bookinfo">
-                        <h1>Некъв учебник по бългаски</h1>
-                        <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас! От
-                        „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и не
-                        изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато ядете
-                        пред телевизора в 2 през нощта.</p>
-                    </div>
-                </div>
-
-                <div class="slide" id="s3">
-                    <a href="book1.html" class="car_link">
-                        <img class="car_picture" title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
-                            src="photos-categ1/kniga3.jpg">
-                    </a>
-                    <div class="bookinfo">
-                        <h1>Некъв учебник по бългаски</h1>
-                        <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас! От
-                        „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и не
-                        изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато ядете
-                        пред телевизора в 2 през нощта.</p>
+                        <h1>Аз и морето</h1>
+                        <p>„Аз и морето“ е книга, която разказва за дълбоката връзка между човек и природа. Чрез историята на главния герой, авторът изследва темите за самотата, търсенето на смисъл и вътрешния мир. </p>
                     </div>
                 </div>
 
