--- a/public/categ2.html
+++ b/public/categ2.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/categ1.css">
     <script src="index.js"></script>
+    <script src="categs.js"></script>
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <header>
-        <a href="index.html">
+        <a href="http://localhost:7000/">
             <img id="logo" src="photos_index/logo.png" width="65px" title="Back to home">
         </a>
 
@@ -34,22 +35,12 @@
 
         <button class="profile" id="profileButton"><i class="fa-solid fa-user"></i></button>
 
+
     </header>
 
-    <div id="sidebar" class="sidebar">
-        <div class="sidebar-header">
-            <h3 id="userName">👤User Name</h3> 
-            <br>
-            <p id="userEmail"><b>📅Registration date:</b>&nbsp;<p style="color: white;"><b>28.02.2025</b></p></p> 
-            <br>
-            <p id="userDescription"><b>🏞️A short description:</b>.</p>
-            <p>Димчо Димов е успешен бизнесмен и предприемач с опит в технологиите и иновациите. В свободното си време обича приключенски спортове и фотография</p>
-        </div>
-        <button id="logoutButton" class="logout-button"><b>Log&nbsp;out</b></button> 
+    <div class="zaglavie-main">
+        <h1 class="bel">Английска литература</h1>
     </div>
-
-
-    <h1 class="bel">Английска литература</h1>
 
     <div class="carousel-container">
 
@@ -63,56 +54,32 @@
 
             <div class="slide" id="s1">
                 <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="book1" src="photos-categ1/kniga1.jpg">
+                    <img class="car_picture" title="book1" src="photos-categ2/kniga1-1.jpg">
                 </a>
                 <div class="bookinfo">
-                    <h1>360° ПРЕДИ КРАЯ</h1>
-                    <p>Това изчадие на бога е сигурно да ви изпие всяка капка съзнание, която притежавате, без
-                        компромиси. С неяната изумителна дебелина и тежест я прави идеален инструмент за замерване,
-                        както и за подарък! Дигиталната ѝ големина също не е за подженяване, която навярно ще ви
-                        завземе 80% от диск с размер 1TB! Прочетете сега ако желаете да замените живота си със някво
-                        жалко съществуване, обусловено единствено от това да си губите времето с тази тухла!</p>
+                    <h1>Onyx Storm</h1>
+                    <p>„Onyx Storm“ е вълнуваща и динамична история, която комбинира елементи на фантастика и приключенски роман. В центъра на сюжета стои героиня, която се изправя пред предизвикателства и вътрешни конфликти.</p>
                 </div>
             </div>
 
             <div class="slide" id="s2">
                 <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="Между чука и наковалнята" src="photos-categ1/kniga2.jpg">
+                    <img class="car_picture" title="Между чука и наковалнята" src="photos-categ2/kniga2-2.jpg">
                 </a>
                 <div class="bookinfo">
-                    <h1>Между Чудовища</h1>
-                    <p>Тази книга ще ви научи на тайното изкуство на продуктивното нищоправене! Със специални
-                        техники като „Ще го направя утре“ и „Ако не го започнеш, няма как да го сбъркаш“, това
-                        четиво ще ви помогне да усъвършенствате прокрастинацията до ниво майстор. Перфектен подарък
-                        за всеки, който има дълъг списък със задачи… и никакво намерение да ги изпълни.</p>
+                    <h1>White Nights</h1>
+                    <p>„White Nights“ е роман, който разказва за срещата между двама души в Санкт Петербург, които споделят кратък, но интензивен период на емоционална връзка. Книгата изследва теми като любовта, самотата и търсенето на смисъл в живота.</p>
                 </div>
             </div>
 
             <div class="slide" id="s3">
                 <a href="book1.html" class="car_link">
                     <img class="car_picture" title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
-                        src="photos-categ1/kniga3.jpg">
+                        src="photos-categ2/kniga4-4.jpg">
                 </a>
                 <div class="bookinfo">
-                    <h1>Некъв учебник по бългаски</h1>
-                    <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас! От
-                        „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и не
-                        изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато ядете
-                        пред телевизора в 2 през нощта.</p>
-                </div>
-            </div>
-
-            <div class="slide" id="s3">
-                <a href="book1.html" class="car_link">
-                    <img class="car_picture" title="wanna learn how to cry in bulgarian?! try this book ove yonder!"
-                        src="photos-categ1/kniga3.jpg">
-                </a>
-                <div class="bookinfo">
-                    <h1>Некъв учебник по бългаски</h1>
-                    <p>Обичате ли да готвите, но никога не стигате до снимки в Instagram? Това е книгата за вас! От
-                        „Спагети с отчаяние“ до „Сандвич с хляб и малко тъга“, тези рецепти са бързи, евтини и не
-                        изискват свидетели. Гарантирано ще ви стане по-вкусно (или поне по-забавно), докато ядете
-                        пред телевизора в 2 през нощта.</p>
+                    <h1>Normal People</h1>
+                    <p>„Normal People“ на Сали Руни е проникновена история за любовта, приятелството и израстването. Романът проследява отношенията между Конел и Мариян, двама млади хора от малко ирландско градче, които преминават през различни етапи на своето съществуване.</p>
                 </div>
             </div>
 
@@ -126,12 +93,11 @@
 
 
     <section class="category">
-
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ2/kniga1.png">
-            </a>
+                    <img class="snimka img-size" src="photos-categ2/kniga1-1.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie">Onyx Storm</h3>
@@ -142,8 +108,8 @@
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ2/kniga2-2.jpg">
-            </a>
+                    <img class="snimka img-size" src="photos-categ2/kniga2-2.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie2">White Nights</h3>
@@ -154,8 +120,8 @@
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ2/kniga3-3.jpg">
-            </a>
+                    <img class="snimka img-size" src="photos-categ2/kniga3-3.jpg">
+                </a>
             </div>
             <div class="text">
                 <h3 id="zaglavie3">Berserk Deluxe</h3>
@@ -166,7 +132,7 @@
         <div class="conteiner">
             <div class="bookpage">
                 <a href="bookpage.html">
-                <img class="img-size" src="photos-categ2/kniga4-4.jpg">
+                    <img class="snimka img-size" src="photos-categ2/kniga4-4.jpg">
                 </a>
             </div>
             <div class="text">
@@ -179,13 +145,13 @@
 
     <footer>
         <div id="navi">
-            <h3><a href="http://localhost:7000/" id="footer_button" title="Back to home.">ReadHub</a></h3>
+            <h3><a href="index.html" id="footer_button" title="Back to home.">ReadHub</a></h3>
 
-            <h3><a href="http://localhost:7000/categ1" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
+            <h3><a href="categ1.html" id="footer_button" title="The classic is the best.">Bulgarian books</a></h3>
 
-            <h3><a href="http://localhost:7000/categ2" id="footer_button" title="Try something new,">English books</a></h3>
+            <h3><a href="categ2.html" id="footer_button" title="Try something new,">English books</a></h3>
 
-            <h3><a href="http://localhost:7000/categ3" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
+            <h3><a href="categ3.html" id="footer_button" title="Aur best offers.">Bestsellers</a></h3>
         </div>
         <div id="info">
             <p id="FormalityMessage">Copyright © 2025, All Rights Reserved</p>
@@ -193,8 +159,8 @@
             <p>email: ReadHub@gmail.com</p>
             <p>Legends enterprises<sup>®</sup></p>
             <div id="info2">
-                <a class="footerlink" href="http://localhost:7000/login"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
-                <a class="footerlink" href="http://localhost:7000/signup"><b>Sign Up</b></a>
+                <a class="footerlink" href="login.html"><b>Login</b>&nbsp;&nbsp;&nbsp;</a>
+                <a class="footerlink" href="signup.html"><b>Sign Up</b></a>
             </div>
         </div>
         <div id="info3">
