--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -13,11 +13,12 @@
   <body>
     <header>
       <div id="navbar_left">
-        
+        <button id="nav_left_button"><i class="fa-solid fa-bars"></i></button>
       </div>
 
       <div id="site_name">
-
+        <img id="logo" src="../src/photos/logo.jpg" width="65px">
+        <h2 id="name">Factify</h2>
       </div>
 
       <div id="sub_button">
