fixed buttons and bashed head against the STUPID CAROUSEL

--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -18,7 +18,7 @@
 
       <div id="site_name">
         <img id="logo" src="../src/photos/logo.jpg" width="65px">
-        <h2 id="name">Factify</h2>
+        <h2 id="name" class="">Factify</h2>
       </div>
 
         <div id="sub_button">
