--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" src="..src/photos/TheLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
     <link rel="stylesheet" href="../src/index.css">
@@ -17,7 +17,7 @@
       </div>
 
       <div id="site_name">
-        <img id="logo" src="../src/photos/logo.jpg" width="65px">
+        <img id="logo" alt="brokenicon" src="TheLogo.png" width="65px">
         <h2 id="name" class="">Factify</h2>
       </div>
 
