--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -17,17 +17,17 @@
       </div>
 
       <div id="site_name">
-        <img id="logo" src="../src/photos/logo.jpg" width="65px">
+        <img id="logo" src="logo.jpg">
         <h2 id="name">Factify</h2>
       </div>
 
         <div id="sub_button">
+          <h2>SUBSCRIBE </h2>
+        </div>  
 
+        <div id="navbar_right">
+          <button id="nav_right_button"><i class="fa-solid fa-gear"></i></button>
         </div>
-
-        <siv id="navbar_right">
-
-        </siv>
     </header>
 
     <div id="root"></div>
