--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
       <div id="navbar_left">
-        <button id="nav_left_button"><i class="fa-solid fa-bars"></i></button>
+        <button class="main_buttons" id="nav_left_button"><i class="fa-solid fa-bars"></i></button>
       </div>
 
       <div id="site_name">
@@ -23,11 +23,11 @@
 
         <div id="sub_button">
           <h2>SUBSCRIBE </h2>
-        </div>  
-
-        <div id="navbar_right">
-          <button id="nav_right_button"><i class="fa-solid fa-gear"></i></button>
         </div>
+
+        <siv id="navbar_right">
+          <button id="nav_right_button"><i class="fa-solid fa-gear"></i></button>
+        </siv>
     </header>
 
     <div id="root"></div>
