Fixed some messy js code and fixed header and carousel button design

--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
       <div id="navbar_left">
-        <button id="nav_left_button"><i class="fa-solid fa-bars"></i></button>
+        <button class="main_buttons" id="nav_left_button"><i class="fa-solid fa-bars"></i></button>
       </div>
 
       <div id="site_name">
