--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" src="..src/photos/TheLogo.png" />
+    <link rel="icon" src="logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
     <link rel="stylesheet" href="../src/index.css">
