--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <div id="site_name">
-        <img id="logo" alt="brokenicon" src="TheLogo.png" width="65px">
+        <img id="logo" alt="brokenicon" src="TheLogo.png" width="35px" height="34px">
         <h2 id="name" class="">Factify</h2>
       </div>
 
@@ -25,7 +25,7 @@
           <h2>SUBSCRIBE </h2>
         </div>
 
-        <siv id="navbar_right">
+        <siv id="navbar_right" class="main_buttons">
           <button id="nav_right_button"><i class="fa-solid fa-gear"></i></button>
         </siv>
     </header>
