--- a/Preparation3/public/index.html
+++ b/Preparation3/public/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <siv id="navbar_right" class="main_buttons">
-          <button id="nav_right_button"><i class="fa-solid fa-gear"></i></button>
+          <button id="nav_right_button" class="main_buttons"><i class="fa-solid fa-gear"></i></button>
         </siv>
     </header>
 
