Repaired profile page

--- a/Preparation3/public/profile.html
+++ b/Preparation3/public/profile.html
@@ -22,11 +22,11 @@
             <i class="fa-solid fa-circle-user"></i>
         </div>
         <div class = "username" id = "username">
-            Dimcho Dimov
+            Dimcho_Dimov
         </div> 
         </div>   
         <div class = "description" id = "description">
-            <p>Entrepeneur</p>
+            A young 40 years old promising entrepreneur that has over 69 bussineses, mad 420 billion $ in profits and also likes teaching young kids the beautiful discipline, called "Entrepreneurship". I'm called both the "docent" and "doctor" title which really shows my intelectual capacity. I also like working 80+ hours for the sake of entrepreneurship and to show "the normal 8-5 people" what real work is. I shower twice a year, and go to the gym once every decade.
         </div>
         </div>
 </div>
