--- a/Preparation3/frontend/public/profile.html
+++ b/Preparation3/frontend/public/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel = "stylesheet" href = "../src/profile.css">
+    <link rel = "stylesheet" href = "../src/styles/profile.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
