--- a/Preparation3/frontend/public/profile.html
+++ b/Preparation3/frontend/public/profile.html
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
-    <link rel = "stylesheet" href = "../src/styles/profile.css">
+    <link rel="stylesheet" href="../src/styles/profile.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<div class  = "container" id = "container">
-    <div class = "buttons" id = "buttons">
-        <button type = "button">Logout</button>
-        <button type = "button">Create an article</button>
-        <button type = "button">Style</button>
-        <button type = "button">FAQ</button>
+    <div class="container" id="container">
+        <div class="buttons" id="buttons">
+            <button type="button">Create an article</button>
+            <button type="button">Log out</button>
+            <button type="button" class="theme-button"><i class="fa-solid fa-circle-half-stroke"></i>Theme</button>
+            <button type="button">FAQ</button>
+        </div>
+    <div class="content1" id="content1">
+        <div class="content" id="content">
+            <div class="pcontainer" id="pcontainer">
+                <div class="profile" id="profile">
+                    My Profile:
+                </div>
+                <div class="profile_picture" id="profile_picture">
+                    <i class="fa-solid fa-circle-user"></i>
+                </div>
+                <div class="username" id="username">
+                    Dimcho_Dimov
+                </div>
+            </div>
+            <div class="description" id="description">
+                <div class="description-text">
+                    Young 40 years old promising entrepreneur that has over 69 businesses, made 420 billion $ in profits
+                    and also likes teaching young kids the beautiful discipline, called "Entrepreneurship". I'm called
+                    both the "docent" and "doctor" title which really shows my intellectual capacity. I also like
+                    working 80+ hours for the sake of entrepreneurship and to show "the normal 8-5 people" what real
+                    work is. I shower twice a year, and go to the gym once every decade.
+                </div>
+            </div>
+        </div>
+
+        <div class="gluposti">
+            I started my journey in entrepreneurship at a very young age. By the time I was 10, I had already started my
+            first small business selling lemonade in my neighborhood. This early experience taught me the basics of running
+            a business and the importance of customer satisfaction. As I grew older, my ventures became more ambitious. In
+            high school, I launched a tech startup that developed educational software for schools. This project not only
+            earned me significant profits but also recognition in the local business community.
+            After graduating from university with a degree in Business Administration, I decided to take my entrepreneurial
+            skills to the next level. I founded several companies in various industries, including technology, finance, and
+            healthcare. Each of these ventures presented unique challenges and opportunities, but my unwavering
+            determination and innovative approach helped me overcome obstacles and achieve success.
+        </div>
+
     </div>
-    <div class = "pcontainer" id = "pcontainer">
-    <div class = "profile" id = "profile">
-        My Profile:
-        <div class = "profile_picture" id = "profile_picture">
-            <i class="fa-solid fa-circle-user"></i>
-        </div>
-        <div class = "username" id = "username">
-            Dimcho_Dimov
-        </div> 
-        </div>   
-        <div class = "description" id = "description">
-            A young 40 years old promising entrepreneur that has over 69 bussineses, mad 420 billion $ in profits and also likes teaching young kids the beautiful discipline, called "Entrepreneurship". I'm called both the "docent" and "doctor" title which really shows my intelectual capacity. I also like working 80+ hours for the sake of entrepreneurship and to show "the normal 8-5 people" what real work is. I shower twice a year, and go to the gym once every decade.
-        </div>
-        </div>
-</div>
+
+    
 </body>
+
 </html>
