snimkite ot about

--- a/Preparation3/public/about.html
+++ b/Preparation3/public/about.html
@@ -10,7 +10,8 @@
             </div>
             <div class="flexg">
                 <div class="img"><img class="img" src="imgqvor.png"></div>
-                <div class="flexm"><p>Text</p></div>
+                <div class="flexm"><p>„Левски“ направи втори пореден изключително луд мач и се
+                    Мачът започна изключително бурно. Още в 1-ата минута Кристиян Стоянов стреля опасно, но Маркович спаси. В ответната атака „Левски“ откри резултата . Марин Петков отне една топка в средата на терена, комбинира с Мислович, който в коридор намери Бала в наказателното поле, крилото нагласи топката на десния си крак и откри – 1:0.</p></div>
             </div>
             <div class="flexg">
                 <div class="img"><img class="img" src="imgvelinov.png"></div>
