--- a/Preparation3/frontend/public/login.html
+++ b/Preparation3/frontend/public/login.html
@@ -18,13 +18,10 @@
             <i class="fa-solid fa-lock"></i>
             <input type="password" id="password" placeholder="Enter your password">
         </div>
-        <br><br><br>
         <div class="submit-btn">
             <button type="button" id="login-btn">Login</button>
         </div>
     </div>
-
-    <!-- Include the JavaScript file -->
-    <script src="/js/login.js"></script>
+    <script src="../src/login.js"></script>
 </body>
 </html>
