--- a/Preparation3/frontend/public/signup.html
+++ b/Preparation3/frontend/public/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="../src/signup.css">
+    <link rel="stylesheet" href="../src/styles/signup.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -19,9 +19,9 @@
             <input type="password" id="password" placeholder="Enter a password">
         </div>
         <div class="submit-btn">
-            <button type="button" id="signup-btn">Sign Up</button>
+            <button type="button" id="signup-btn" onclick="handleSignup()">Sign Up</button>
         </div>
     </div>
-    <script src="/js/signup.js"></script>
+    <script src="../src/signup.js"></script>
 </body>
 </html>
