--- a/Preparation3/frontend/public/signup.html
+++ b/Preparation3/frontend/public/signup.html
@@ -19,7 +19,7 @@
             <input type="password" id="password" placeholder="Enter a password">
         </div>
         <div class="submit-btn">
-            <button type="button" id="signup-btn" onclick="handleSignup()">Sign Up</button>
+            <button type="button" id="signup-btn">Sign Up</button>
         </div>
     </div>
     <script src="../src/signup.js"></script>
