Near ready server - only needs 1 test to confirm the error

--- a/Preparation3/frontend/public/signup.html
+++ b/Preparation3/frontend/public/signup.html
@@ -22,6 +22,6 @@
             <button type="button" id="signup-btn">Sign Up</button>
         </div>
     </div>
-    <script src="../src/signup.js"></script>
+    <script src="/src/signup.js"></script>
 </body>
 </html>
