--- a/Preparation3/frontend/public/index.html
+++ b/Preparation3/frontend/public/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" src="logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
-    <link rel="stylesheet" href="../src/index.css">
+    <link rel="stylesheet" href="../../frontend/src/styles/index.css">
     <script src="https://kit.fontawesome.com/eb00f32ec1.js" crossorigin="anonymous"></script>
 </head>
 
