--- a/Preparation3/frontend/public/index.html
+++ b/Preparation3/frontend/public/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <div id="root"></div>
-
+    <script src="/static/js/main.js"></script>
 
     <footer class="footer">
       <div class="section2_footer">
@@ -89,10 +89,12 @@
       <!--footer_ul_amrc ends here-->
       </div>
   </div>
+
+  
       
   
       
-      </footer>
+  </footer>
 
 </body>
 
