--- a/Preparation3/frontend/public/article.html
+++ b/Preparation3/frontend/public/article.html
@@ -177,8 +177,8 @@
 
 
     <div class="form-container">
-        <input  style="margin-top: -1%;  margin-left: none;"  type="text"  placeholder="Enter article title">
-        <textarea id="articleContent" maxlength="6000" placeholder="Enter article content (up to 6000 characters)"></textarea>
+        <input id="title"  style="margin-top: -1%;  margin-left: none;"  type="text"  placeholder="Enter article title">
+        <textarea id="article_text"   id="articleContent" maxlength="6000" placeholder="Enter article content (up to 6000 characters)"></textarea>
     </div>
 </body>
 </html>
