--- a/Preparation3/frontend/public/article.html
+++ b/Preparation3/frontend/public/article.html
@@ -180,5 +180,6 @@
         <input id="title" style="margin-top: -1%;  margin-left: none;"  type="text"  placeholder="Enter article title">
         <textarea id="article_text"   id="articleContent" maxlength="6000" placeholder="Enter article content (up to 6000 characters)"></textarea>
     </div>
+    <button></button>
 </body>
 </html>
