added 2/5 about us descs and fixed about us design

--- a/Preparation3/frontend/public/about.html
+++ b/Preparation3/frontend/public/about.html
@@ -1,34 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="../src/about.css">
-    </head>
-    <body>
-        <div class="flexbox">
-            <div class="flext">
-                <div class="flexmt"><h1>About page</h1></div>
-            </div>
-            <div class="flexg">
-                <div class="img"><img class="img" src="imgqvor.png"></div>
-                <div class="flexm"><p>„Левски“ направи втори пореден изключително луд мач и се
-                    Мачът започна изключително бурно. Още в 1-ата минута Кристиян Стоянов стреля опасно, но Маркович спаси. В ответната атака „Левски“ откри резултата . Марин Петков отне една топка в средата на терена, комбинира с Мислович, който в коридор намери Бала в наказателното поле, крилото нагласи топката на десния си крак и откри – 1:0.</p></div>
-            </div>
-            <div class="flexg">
-                <div class="img"><img class="img" src="imgvelinov.png"></div>
-                <div class="flexm"><p>Text</p></div>
-            </div>
-            <div class="flexg">
-                <div class="img"><img class="img" src="imgmih.png"></div>
-                <div class="flexm"><p>Text</p></div>
-            </div>
-            <div class="flexg">
-                <div class="img"><img class="img" src="img77.png"></div>
-                <div class="flexm"><p>Text</p></div>
-            </div>
-            <div class="flexg">
-                <div class="img"><img class="img" src="imgdein.png"></div>
-                <div class="flexm"><p>Text</p></div>
+
+<head>
+    <link rel="stylesheet" href="../src/styles/about.css">
+</head>
+
+<body>
+    <div class="flexbox">
+        <div class="flext">
+            <div class="flexmt">
+                <h1>About page</h1>
             </div>
         </div>
-    </body>    
+        <div class="flexg">
+            <div class="img-container"><img class="img" src="imgqvor.png"></div>
+            <div class="flexm">
+                <p>The first highly appreciated developer we must thank for this endeavour is of course Mr. Yavor Penev.
+                    Probably the most organized of the team (which isn't saying too much to be fair), he has been the
+                    primary extrinsic motivation for most of the remaining team. As the leading work didtribution
+                    manager, he has set upon himself the task of 'careening' the team towards its goals, handing out
+                    assignment after assignemt like nobody's business (to much of the less motivated members of the
+                    team's dismay). This isn't to say that that is the only thing he is responsible for. As the lead
+                    consulting manager of the team, every speculative decision that is taken during the development
+                    process must pass through the 'quality check' phase, where through a highly democratic voting system
+                    the team reaches a conclusion, which may or may not be every bit as conclusive as the Bulgarian
+                    parliament(especially if somebody's behind on a commit or a dozen so). Mr. Penev's work isn't always
+                    focused on purely administrative tasks, as he has also highly influenced the final outcome of the
+                    main page, most notably the header and footer, ensuring that they are a balsam for any user's eyes.
+                    The contents of the sliding menus have also been handcrafted by our hardworking developer, who is
+                    the one to thank (or ultimately blame) for their organization and appearance. Acting like the
+                    'Jack-Of-All-Trades', Mr. Yavor has also taken the time to assist the other part of the team with
+                    the database, which is oblviously a core part of this marvel.</p>
+            </div>
+        </div>
+        <div class="flexg">
+            <div class="img-container"><img class="img" src="imgvelinov.png"></div>
+            <div class="flexm">
+                <p>Yet another developer to thank is Mr Kristian Velinov. As the main React developer, it comes to
+                    nobody's surprise, that some rather 'niche' (but very neat) functionalities have been lovingly (or
+                    angrily at times) crafted for the viewer's sake. Such being the theme changer button, carousel
+                    implementation, design and animation, as well as the overall website theme presets and design
+                    patters, that have been determined in conjunction with the aforementioned Mr. Penev. Mr Velinov is
+                    responsible for the overall webite idea and grand appearance, relating to which we have done our
+                    best to work with and keep unchanged throughout the entirety of the project. Mr. Velinov has also
+                    taken the unnoficial bug testing and removing responsibility sadly not due to his own will, rather
+                    because of the slightly frequent occurance of insignifigant backend changes and reorganizations
+                    leading to massive issues with his code specifically. These hardships have also almost caused a
+                    laptop-sized hole in Mr. Kristian's wall. Our caring developer (ironically proceeding to speak about
+                    himself in third person) has also taken the time to personally handcraft the contents of this very
+                    page, desperately hoping for somebody to take the time and read through it all. Perhaps if there was
+                    a monetary reward for reading through this entire page, would people read it...</p>
+            </div>
+        </div>
+        <div class="flexg">
+            <div class="img-container"><img class="img" src="imgmih.png"></div>
+            <div class="flexm">
+                <p></p>
+            </div>
+        </div>
+        <div class="flexg">
+            <div class="img-container"><img class="img" src="img77.png"></div>
+            <div class="flexm">
+                <p>Text</p>
+            </div>
+        </div>
+        <div class="flexg">
+            <div class="img-container"><img class="img" src="imgdein.png"></div>
+            <div class="flexm">
+                <p>Text</p>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
