Some kind of troubleshoot

--- a/Preparation3/frontend/public/article.html
+++ b/Preparation3/frontend/public/article.html
@@ -141,7 +141,7 @@
                 }
 
                 try {
-                    const response = await fetch("http://localhost:8080/api/article", {
+                    const response = await fetch("http://localhost:8080/article", {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json"
