--- a/Preparation3/frontend/public/about.html
+++ b/Preparation3/frontend/public/about.html
@@ -55,19 +55,51 @@
         <div class="flexg">
             <div class="img-container"><img class="img" src="imgmih.png"></div>
             <div class="flexm">
-                <p></p>
+                <p>The third member of the team is Mr. Kristiyan Mihailov. As yet another key developer, he is
+                    responsible for everything that is behind an end, or in other words, the backend. Through courage,
+                    determination, valor and might, he has been able to learn to fight the vicious menace that is mySQL,
+                    Node.js and Express.js - an undertaking that nobody wished to fulfill exept himself! His work has
+                    been of paramount importance to the entire project, as his web of work spans from the very extensive
+                    database, containing every piece of information that our hardworking previous two members have
+                    ensured that it reaches the viewer's eyes, much to their contént. Yet another fruit of his labour
+                    are
+                    the two 'Profile' and 'Login'/'Signup' pages, gruellingly built up from the ground to serve our
+                    users personalized and customizable options to choose from. Yet another feature that has been
+                    brought to life from Mr. Mihailov is his venture into the realm of organizing the entire project
+                    and its folders, much to our React developer's dismay. Sadly however, it seems he Mr. Kristiyan has
+                    submitted to
+                    conform to the team, as it left a lasting mark on various other members' sanity and mental health.
+                    Let's just hope he doesn't touch anything again, or a preemtive brick might be hurled his way.
+                </p>
             </div>
         </div>
         <div class="flexg">
             <div class="img-container"><img class="img" src="img77.png"></div>
             <div class="flexm">
-                <p>Text</p>
+                <p>As the fourth member of the team Mr. bobi77 'Stoynev' is yet another vital cog in the machine that is
+                    this project. Despite being the rather inert and busy member, he has managed to spare us a bit of
+                    his time to produce some stuff truly magnificent to the eye! The 'stuff' in question being the FAQ
+                    (pronounced [Fà-Kíuu]) page, as our thoughts and examinations have led us to believe, that most
+                    people don't know how to computer, let alone navigate even our intuitive design and layout. Mr.
+                    Stoynev is also responsible for the thorough github description, which explains our project in its
+                    core. Bobi77, I failed to mention before, is also in his primary time an expert basketball player,
+                    not due to coincidence, but because of the plain fact, that he is also the sole nephew of
+                    Vezenkov!!! He is also <b>THE</b> basketballer, who is most frequently chosen by our beloved Mrs.
+                    Basheva, which is an achievement in itself. Autographs from 13:50 to 14:10 GMT, Mondays in Бюфет №9
+                    only. Payment in advance</p>
             </div>
         </div>
         <div class="flexg">
             <div class="img-container"><img class="img" src="imgdein.png"></div>
             <div class="flexm">
-                <p>Text</p>
+                <p>Last but not least comes our equally cherished developer Mr Dein. He is the one responsible for this
+                    very page skeleton design, as well as the image insertions. Much like our main team coordinator Mr.
+                    Yavor Penev, Mr. Dein is active both frontend and backend, as most dropdown menus have been inserted
+                    according to his work. Behind the front, he has also been of assistance to our main backend
+                    developer - Mr. Mihailov. Mr. Dein specialises in the languages of node.js and express.js,
+                    originating from Mr. Dein's own request to study and learn them. He probably regrets it now. Being
+                    yet another talented sportsman, he is a vigorous supporter of Bulgarian football, as he himself has
+                    experience in it too. Autographs from 24:10 to 24:15, PMT, Timor Leste.</p>
             </div>
         </div>
     </div>
