--- a/Preparation3/frontend/public/index.html
+++ b/Preparation3/frontend/public/index.html
@@ -21,6 +21,10 @@
         <h2 id="name" class="">Factify</h2>
       </div>
 
+      <div id="search-bar" class="main_buttons">
+        <input type="text" class="search" placeholder="Search...">
+      </div>
+
         <div id="sub_button">
           <h2>SUBSCRIBE</h2>
         </div>
