final-faqpages-and-profile

--- a/Preparation3/frontend/public/profile.html
+++ b/Preparation3/frontend/public/profile.html
@@ -36,13 +36,14 @@
                 </div>
                 <div class="description" id="description">
                     <div class="description-text">
-                        Young 40 years old promising entrepreneur that has over 69 businesses, made 420 billion $ in
+                        <p >Young 40 years old promising entrepreneur that has over 69 businesses, made 420 billion $ in
                         profits
                         and also likes teaching young kids the beautiful discipline, called "Entrepreneurship". I'm
                         called
                         both the "docent" and "doctor" title which really shows my intellectual capacity. I also like
                         working 80+ hours for the sake of entrepreneurship and to show "the normal 8-5 people" what real
                         work is. I shower twice a year, and go to the gym once every decade.
+                        </p>
                     </div>
                 </div>
             </div>
