--- a/elements/Dropdown.html
+++ b/elements/Dropdown.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-
-    </head>
-    <body>
         <style>
             .dropdown {
                 font-size: 30px;
+                position: relative;
+                display: inline-block;
             }
             .dropdown .dropbtn {
                 font-size: 40px;
@@ -14,7 +13,6 @@
                 color: aqua;
                 padding: 14px 60px;
                 background-color: #000000;
-                margin: 0;
             }
             .dropdown:hover .dropbtn {
                 background-color: aqua;
@@ -22,34 +20,44 @@
             }
             .dropdown-content {
                 display: none;
-                text-align: center;
+                position: absolute;
+                left: 0;
                 background-color: #f9f9f9;
-                width: 16%;
+                border-radius: 3%;
             }
             .dropdown-content a {
-                float: none;
-                text-align: center;
-                color: black;
-                padding: 12px 16px 12px 16px;
-                text-decoration: none;
                 display: block;
+                text-align: center;
+                color: white;
+                padding: 12px;
+                text-decoration: none;
                 background-color: rgb(85, 47, 169);
             }
             .dropdown-content a:hover {
                 background-color: rgb(11, 5, 24);
-                color: #000000;
+                color: #ffffff;
             }
             .dropdown:hover .dropdown-content {
                 display: block;
             }
+           .dropdown .dropbtn {
+                font-size: 30px;
+                padding: 12px 40px;
+            }
+            .dropdown-content {
+                width: 100%;
+                min-width: unset;
+            }
         </style>
-            <div class="dropdown">
-                <button class="dropbtn">Menu</button>
-                 <div class="dropdown-content">
-                  <a href="index.html">Home</a>
-                  <a href="about.html">About</a>
-                  <a href="about.html">Mitko</a>
-                 </div>
-              </div>
+    </head>
+    <body>
+        <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="mitko.html">Mitko</a>
+            </div>
+        </div>
     </body>
 </html>
