--- a/elements/carousel.html
+++ b/elements/carousel.html
@@ -19,7 +19,6 @@
             height: auto;
             min-height: 50vh;
             max-width: 60%;
-
             position: relative;
             margin: 0 auto;
             background-color: #bbdefb;
@@ -38,8 +37,9 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                overflow: hidden;
                 height: auto;
+                max-height: 100%;
+
             }
 
             .mySlides img {
@@ -47,6 +47,7 @@
                 height: auto;
                 max-height: 100%;
                 object-fit: contain;
+                
             }
         }
 
